--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,12 @@
+https://docs.gbif.org/documentation-guidelines/[image:https://docs.gbif.org/documentation-guidelines/gbif-document-shield.svg[GBIF Document]]
+//https://doi.org/10.15468/doc-XXXX-XXXX[image:https://zenodo.org/badge/DOI/10.15468/doc-XXXX-XXXX.svg[doi:10.15468/doc-XXXX-XXXX]]
+https://creativecommons.org/licenses/by-sa/4.0/[image:https://img.shields.io/badge/License-CC%20BY%2D-SA%204.0-lightgrey.svg[CC BY-SA 4.0]]
 https://builds.gbif.org/job/doc-data-pipelines-for-biodiversity-data/[image:https://builds.gbif.org/job/doc-data-pipelines-for-biodiversity-data/badge/icon[Build status]]
 
-= Data pipelines for biodiversity data
+= Data Pipelines for Biodiversity Data
 
 _This is information *about* this document's source code.  It is not part of the document._
 
-The document is available as HTML and PDF at https://www.gbif-uat.org/data-pipelines-for-biodiversity-data/[Document Template].
+The document is available as HTML and PDF at https://www.gbif-uat.org/data-pipelines-for-biodiversity-data/[Data Pipelines for Biodiversity Data].
 
 The document is built using AsciiDoc, for guidance on how to make changes or suggestions see the https://labs.gbif.org/documents/documentation-guidelines/[GBIF Documentation Guidelines].
