--- a/500_100_community.en.adoc
+++ b/500_100_community.en.adoc
@@ -4,25 +4,7 @@
 
 The GBIF …
 
-==== Commands
-
-----
-mkdocs new [dir-name] - Create a new project.
-mkdocs serve - Start the live-reloading docs server.
-mkdocs build - Build the documentation site.
-mkdocs help - Print this help message.
-----
-
-==== Project layout
-
-----
-mkdocs.yml    # The configuration file.
-docs/
-    index.md  # The documentation homepage.
-    ...       # Other markdown pages, images and other files.
-----
-
-=== Tutorials
-=== Contributor guide
-=== Build and releasing
-=== People
+== Tutorials
+== Contributor guide
+== Build and releasing
+== People
