--- a/en/modules/ROOT/pages/400_100_formats.adoc
+++ b/en/modules/ROOT/pages/400_100_formats.adoc
@@ -1,21 +1,21 @@
-== Formats
+= Formats
 
-=== Overview
+== Overview
 
-=== Field delimited formats
+== Field delimited formats
 
-==== Simple delimited
+=== Simple delimited
 
 Simple delimited format, called `SIMPLE_CSV` within the GBIF API, is a <<tab-separated>> text file containing the most commonly used interpreted terms.
 
 ...
 
-=== Data packages (DwC-A)
+== Data packages (DwC-A)
 
 Darwin Core Archives ...
 
-=== Geospatial formats
+== Geospatial formats
 
-=== Essential biodiversity variables (EBVs)
+== Essential biodiversity variables (EBVs)
 
-=== Ad-hoc SQL
+== Ad-hoc SQL
