--- a/en/modules/ROOT/pages/index.adoc
+++ b/en/modules/ROOT/pages/index.adoc
@@ -1,12 +1,12 @@
-== Data Pipelines
+= Data Pipelines
 
-=== Process biodiversity data
+== Process biodiversity data
 
 Data Pipelines provides components to integrate, structure, interpret and transform biodiversity data. Built for extensibility, portability and high performance, data pipelines powers services such as https://www.gbif.org/[GBIF.org].
 
-image::img/pipeline.png[align="center"]
+image::pipeline.png[align="center"]
 
-==== Features
+=== Features
 
 Some of the high-level capabilities and objectives of Data Pipelines include:
 
