--- a/en/modules/ROOT/pages/100_200_architecture.adoc
+++ b/en/modules/ROOT/pages/100_200_architecture.adoc
@@ -4,4 +4,4 @@ The data pipeline project comprises of a collection of components which can be u
 
 == Deployment example 1: GBIF
 
-image::img/pipeline.png[align="center"]
+image::pipeline.png[align="center"]
